# burg_scene_visualizer

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml
examples/object_library/: example_library.yaml
examples/scenes/: scene01.yaml  scene02.yaml
launch/: hsrb_visualize.launch  visualize.launch
nodes/: visualize_scene.py
rviz/: visualizer-config.rviz
